- move workaround to seperated branch - some notes about how to run - 5 seconds statistics